<resources>
    <string name="app_name">AppBaoCao</string>
    <string name="facebook_app_id">584313915252964</string>
    <string name="skip">Skip</string>
    <string name="t_n_ng_nh_p">Tên đăng nhập</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="ng_nh_p">ĐĂNG NHẬP</string>
    <string name="b_n_ch_a_c_t_i_kho_n">Bạn chưa có tài khoản ?</string>
    <string name="ng_k">Đăng ký</string>
    <string name="b_n_c_t_i_kho_n">Bạn đã có tài khoản?</string>
    <string name="ng_nh_p_2">Đăng nhập</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="category">Category</string>
    <string name="update">Update</string>
    <string name="tu_i">Tuổi</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="profile">Profile</string>
</resources>
