<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/background_splash"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/t_n_ng_nh_p"
            android:padding="@dimen/size12"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/size24"
            android:textSize="@dimen/size_text_20"
            android:ems="10"
            android:id="@+id/edt_ten_dang_nhap"
            android:layout_marginEnd="@dimen/size24"
            android:textColorHint="@color/colorWhite"
            android:background="@drawable/border_edt_white"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/m_t_kh_u"
            android:padding="@dimen/size12"
            android:ems="10"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/size20"
            android:layout_marginStart="@dimen/size24"
            android:textSize="@dimen/size_text_20"
            android:id="@+id/edt_mat_khau"
            android:inputType="textPassword"
            android:layout_marginEnd="@dimen/size24"
            android:textColorHint="@color/colorWhite"
            android:background="@drawable/border_edt_white"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/nh_p_l_i_m_t_kh_u"
            android:padding="@dimen/size12"
            android:ems="10"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/size20"
            android:layout_marginStart="@dimen/size24"
            android:textSize="@dimen/size_text_20"
            android:id="@+id/edt_lai_mat_khau"
            android:inputType="textPassword"
            android:layout_marginEnd="@dimen/size24"
            android:textColorHint="@color/colorWhite"
            android:background="@drawable/border_edt_white"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:text="@string/ng_k"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/btn_dang_ky"
            android:layout_marginStart="@dimen/size24"
            android:layout_marginEnd="@dimen/size24"
            android:layout_marginTop="@dimen/size20"
            android:textSize="@dimen/size_text_20"
            android:background="@drawable/button_white"
            android:textColor="@color/colorGreenOriginal"
            android:layout_height="wrap_content" />
        <TableRow android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:text="@string/b_n_c_t_i_kho_n"
                android:textColor="@color/colorWhite"
                android:textStyle="italic|bold"
                android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                android:text="@string/ng_nh_p_2"
                android:textStyle="italic|bold"
                android:layout_marginStart="@dimen/size4"
                android:id="@+id/tv_dang_nhap"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"/>
        </TableRow>
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/pro_register"
        android:visibility="gone"
        android:layout_height="wrap_content" />
</RelativeLayout>